@@ -17,7 +17,11 @@ craft-atom 2.0.0
 UPGRADE URGENCY: HIGH
 
 * craft-atom-nio
-  [IMPROVED] - refactor nio design and implementation, provide more clean and consistent api and better performance.
+  [IMPROVE]  - refactor nio design and implementation, provide more clean and consistent api and better performance.
 
 * craft-atom-cache
   [FIX]      - cache transaction api "watch" bugs, it doesn't hold the connection in one transaction.
+  
+* craft-atom-protocol-http
+  [FIX]      - http protocol header model, use list instead of map, because header name can be repeatable.
+  [ADD]      - http protocol entity content type definition.
